# slack-map

api/: .gitignore  Cargo.toml
api/src/: lib.rs  main.rs  packages.rs  parser.rs  startup.rs
api/src/routes/: mod.rs  packages.rs
api/tests/: dependencies.rs
frontend/: package-lock.json  package.json
frontend/src/: App.svelte  DependencyGraph.svelte
frontend/src/routes/: +page.svelte
